--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
     "next": "10.0.5",
+    "normalize.css": "^8.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
