--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "dayjs": "^1.10.3",
     "next": "10.0.5",
     "normalize.css": "^8.0.1",
     "react": "17.0.1",
