--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "10.0.5",
     "normalize.css": "^8.0.1",
     "react": "17.0.1",
+    "react-content-loader": "^6.0.0",
     "react-dom": "17.0.1"
   }
 }
