responsive to tablet and tvs

--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ IPIFY_KEY=at_2AB8r33uuDMULjNIDPDTairZoiXfs
 OPENWEATHERMAP_KEY=8fd68c9d020a9bf0f2a7482a46cf04a0
 
 PIXABAY_KEY=16548154-5a2a1bb33b7d39c9155307e21
+
+
+${procces.env.OPENWEATHERMAP_KEY}
+${procces.env.PIXABAY_KEY}
