--- a/.env
+++ b/.env
@@ -1,9 +1,14 @@
-IPIFY_KEY=at_2AB8r33uuDMULjNIDPDTairZoiXfs
+Roberto
+IPIFY_KEY=at_XjMOJyLU0aJDXmH4lllRTilFbAKaa
+
+
+MyKeyIPIFY_KEY=at_2AB8r33uuDMULjNIDPDTairZoiXfs
+
 
 OPENWEATHERMAP_KEY=8fd68c9d020a9bf0f2a7482a46cf04a0
 
 PIXABAY_KEY=16548154-5a2a1bb33b7d39c9155307e21
 
 
-${procces.env.OPENWEATHERMAP_KEY}
-${procces.env.PIXABAY_KEY}
+${proccess.env.OPENWEATHERMAP_KEY}
+${proccess.env.PIXABAY_KEY}
